Update refs and index.

--- a/about/index.html
+++ b/about/index.html
@@ -92,9 +92,9 @@ which is one of the projects I worked on.</p>
 
 <p>After my time in industry and working close to research, I decided to step up and move to Academia.
 I started at Aalto University as a Research Assistant (2019) to continue as a PhD Candidate.
-My PhD is funded by the AI Spider Silk Threading (ASSET) project. 
-The project goal is to mimic the natural spider pultrusion process 
-via robotic micro-manipulation and reinforcement learning.</p>
+My PhD has been funded by the AI Spider Silk Threading (ASSET) project, and the Bridging the Reality Gap in Autonomous Learning (B-REAL) project,
+both supported by the Academy of Finland. 
+My research focuses on learning representation and learning more efficient manipulation for deformable objects.</p>
 
 <p>On my free time, aside of electronic and ML projects, I really enjoy bouldering.
 I started bouldering on 2019 and sport climbing on 2022.</p>
