--- a/publications/index.html
+++ b/publications/index.html
@@ -113,7 +113,7 @@ function toggleBibtextuomainen2021manipulation(parameter) {
 </li></ol>
 
 <h2 id="conference-papers">Conference papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="hietala2022visualfeedback">Hietala, J., Blanco–Mulero, D., Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="hietala2022visualfeedback">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></div>
 <button class="button0" onclick="toggleBibtexhietala2022visualfeedback()">Bibtex</button>
  
 
@@ -136,7 +136,7 @@ function toggleBibtextuomainen2021manipulation(parameter) {
 
 <div id="ahietala2022visualfeedback" style="display: none;">
 <pre>@inproceedings{hietala2022visualfeedback,
-  author = {Hietala, Julius and Blanco–Mulero, David and Alcan, Gokhan and Kyrki, Ville},
+  author = {Hietala, Julius and Blanco-Mulero, David and Alcan, Gokhan and Kyrki, Ville},
   booktitle = {2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   title = {Learning Visual Feedback Control for Dynamic Cloth Folding},
   year = {2022},
