--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ supervised by Prof. Ville Kyrki.</p>
 the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
 
 <h2 id="selected-publications">Selected Publications</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="hietala2022visualfeedback">Hietala, J., Blanco–Mulero, D., Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="hietala2022visualfeedback">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></div>
 <button class="button0" onclick="toggleBibtexhietala2022visualfeedback()">Bibtex</button>
  
 
@@ -108,7 +108,7 @@ the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement 
 
 <div id="ahietala2022visualfeedback" style="display: none;">
 <pre>@inproceedings{hietala2022visualfeedback,
-  author = {Hietala, Julius and Blanco–Mulero, David and Alcan, Gokhan and Kyrki, Ville},
+  author = {Hietala, Julius and Blanco-Mulero, David and Alcan, Gokhan and Kyrki, Ville},
   booktitle = {2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   title = {Learning Visual Feedback Control for Dynamic Cloth Folding},
   year = {2022},
