--- a/index.html
+++ b/index.html
@@ -304,8 +304,9 @@ function toggleBibtexrajani2022coimitation(parameter) {
 </li></ol>
 
 <h2 id="news">News</h2>
-<p><strong>08.02.2023</strong> - Our work <a href="https://sites.google.com/view/co-imitation">Co-Imitation: Learning Design and Behaviour by Imitation</a> was presented yesterday at AAAI 2023. 
-<strong>20.11.2022</strong> - Our work <a href="https://arxiv.org/abs/2209.01207">Co-Imitation: Learning Design and Behaviour by Imitation</a> was accepted to the NeurIPS <a href="https://sites.google.com/view/deep-rl-workshop-neurips-2022">DeepRL Workshop 2022</a>!</p>
+<p><strong>08.02.2023</strong> - Our work <a href="https://sites.google.com/view/co-imitation">Co-Imitation: Learning Design and Behaviour by Imitation</a> was presented yesterday at AAAI 2023!</p>
+
+<p><strong>20.11.2022</strong> - Our work <a href="https://arxiv.org/abs/2209.01207">Co-Imitation: Learning Design and Behaviour by Imitation</a> was accepted to the NeurIPS <a href="https://sites.google.com/view/deep-rl-workshop-neurips-2022">DeepRL Workshop 2022</a>.</p>
 
 <p><strong>26.10.2022</strong> - I presented our work “<a href="https://arxiv.org/abs/2109.04771">Learning Visual Feedback Control for Dynamic Cloth Folding</a>” at IROS 2022, which was a finalist for the IROS Best RoboCup Paper, IROS ABB Best Student Paper and IROS Best Paper awards! Check the <a href="https://sites.google.com/view/dynamic-cloth-folding/home">project website</a> for more information.</p>
 
