--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"https://dblanm.github.io//","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"headline":"David Blanco-Mulero","@type":"WebSite","description":"PhD Candidate Aalto University","url":"https://dblanm.github.io//","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -223,6 +223,48 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 }
 </script>
 </li>
+<li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). <i>QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="ablancomulero2023qdp" style="display: none;">
+<pre>@misc{blancomulero2023qdp,
+  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
+  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  year = {2023},
+  eprint = {2303.13320},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.RO},
+  link = {https://arxiv.org/abs/2303.13320},
+  group = {preprint},
+  website = {https://sites.google.com/view/qdp-srl}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexblancomulero2023qdp(parameter) {
+    var x= document.getElementById('ablancomulero2023qdp');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
 <li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
 <button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
  
@@ -304,6 +346,9 @@ function toggleBibtexrajani2022coimitation(parameter) {
 </li></ol>
 
 <h2 id="news">News</h2>
+<p><strong>24.03.2023</strong> We just published <a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
+Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a href="https://sites.google.com/view/qdp-srl">project website</a> for videos and more information.</p>
+
 <p><strong>08.02.2023</strong> - Our work <a href="https://sites.google.com/view/co-imitation">Co-Imitation: Learning Design and Behaviour by Imitation</a> was presented yesterday at AAAI 2023!</p>
 
 <p><strong>20.11.2022</strong> - Our work <a href="https://arxiv.org/abs/2209.01207">Co-Imitation: Learning Design and Behaviour by Imitation</a> was accepted to the NeurIPS <a href="https://sites.google.com/view/deep-rl-workshop-neurips-2022">DeepRL Workshop 2022</a>.</p>
@@ -332,7 +377,7 @@ to the <a href="http://roseyu.com/time-series-workshop/">Time Series Workshop</a
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 06 March 2023
+                    Last updated on 24 March 2023
             </small>
           </p>
 
