--- a/publications/index.html
+++ b/publications/index.html
@@ -33,7 +33,7 @@
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"https://dblanm.github.io//publications/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"headline":"David Blanco-Mulero","@type":"WebPage","description":"PhD Candidate Aalto University","url":"https://dblanm.github.io//publications/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -375,7 +375,48 @@ function toggleBibtexrajani2022coimitation(parameter) {
 </li></ol>
 
 <h2 id="preprints">Preprints</h2>
-<ol class="bibliography"></ol>
+<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). <i>QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="ablancomulero2023qdp" style="display: none;">
+<pre>@misc{blancomulero2023qdp,
+  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
+  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  year = {2023},
+  eprint = {2303.13320},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.RO},
+  link = {https://arxiv.org/abs/2303.13320},
+  group = {preprint},
+  website = {https://sites.google.com/view/qdp-srl}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexblancomulero2023qdp(parameter) {
+    var x= document.getElementById('ablancomulero2023qdp');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li></ol>
 
             </article>
         </main>
@@ -385,7 +426,7 @@ function toggleBibtexrajani2022coimitation(parameter) {
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 06 March 2023
+                    Last updated on 24 March 2023
             </small>
           </p>
 
