--- a/software/index.html
+++ b/software/index.html
@@ -33,7 +33,7 @@
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"https://dblanm.github.io//software/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"headline":"David Blanco-Mulero","@type":"WebPage","description":"PhD Candidate Aalto University","url":"https://dblanm.github.io//software/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -109,7 +109,7 @@
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 06 March 2023
+                    Last updated on 24 March 2023
             </small>
           </p>
 
