--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"https://dblanm.github.io//404.html","description":"PhD Candidate Aalto University","headline":"Error 404!","@context":"https://schema.org"}</script>
+{"headline":"Error 404!","@type":"WebPage","description":"PhD Candidate Aalto University","url":"https://dblanm.github.io//404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -79,7 +79,7 @@ The page you are looking for is not found. Please head back to <a href="/">Homep
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 06 March 2023
+                    Last updated on 24 March 2023
             </small>
           </p>
 
