--- a/publications/index.html
+++ b/publications/index.html
@@ -113,7 +113,48 @@ function toggleBibtextuomainen2021manipulation(parameter) {
 </li></ol>
 
 <h2 id="conference-papers">Conference papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="hietala2022visualfeedback">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
+<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="arajani2023coimitation" style="display: none;">
+<pre>@article{rajani2023coimitation,
+  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume = {37},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  website = {https://sites.google.com/view/co-imitation},
+  link = {https://arxiv.org/abs/2209.01207},
+  year = {2023},
+  group = {conference}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexrajani2023coimitation(parameter) {
+    var x= document.getElementById('arajani2023coimitation');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="hietala2022visualfeedback">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></div>
 <button class="button0" onclick="toggleBibtexhietala2022visualfeedback()">Bibtex</button>
  
 
@@ -154,47 +195,6 @@ function toggleBibtextuomainen2021manipulation(parameter) {
 <script>
 function toggleBibtexhietala2022visualfeedback(parameter) {
     var x= document.getElementById('ahietala2022visualfeedback');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
-<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
-
- 
-
-
-
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="arajani2023coimitation" style="display: none;">
-<pre>@article{rajani2023coimitation,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume = {37},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  website = {https://sites.google.com/view/co-imitation},
-  link = {https://arxiv.org/abs/2209.01207},
-  year = {2023},
-  group = {conference}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexrajani2023coimitation(parameter) {
-    var x= document.getElementById('arajani2023coimitation');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -295,7 +295,45 @@ function toggleBibtex2016_puma(parameter) {
 </li></ol>
 
 <h2 id="workshop-papers">Workshop papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="rajani2022coimitation_workshop">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>. https://openreview.net/forum?id=SigVQmfyVfR</span></div>
+<button class="button0" onclick="toggleBibtexrajani2022coimitation_workshop()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="arajani2022coimitation_workshop" style="display: none;">
+<pre>@inproceedings{rajani2022coimitation_workshop,
+  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  booktitle = {Deep Reinforcement Learning Workshop NeurIPS 2022},
+  year = {2022},
+  url = {https://openreview.net/forum?id=SigVQmfyVfR},
+  group = {workshop},
+  website = {https://sites.google.com/view/co-imitation}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexrajani2022coimitation_workshop(parameter) {
+    var x= document.getElementById('arajani2022coimitation_workshop');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
 <button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
  
 
@@ -334,44 +372,6 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
     }
 }
 </script>
-</li>
-<li><div class="text-justify"><span id="rajani2022coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>. https://openreview.net/forum?id=SigVQmfyVfR</span></div>
-<button class="button0" onclick="toggleBibtexrajani2022coimitation()">Bibtex</button>
- 
-
- 
-
- 
-
- 
-
-
-
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="arajani2022coimitation" style="display: none;">
-<pre>@inproceedings{rajani2022coimitation,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  booktitle = {Deep Reinforcement Learning Workshop NeurIPS 2022},
-  year = {2022},
-  url = {https://openreview.net/forum?id=SigVQmfyVfR},
-  group = {workshop},
-  website = {https://sites.google.com/view/co-imitation}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexrajani2022coimitation(parameter) {
-    var x= document.getElementById('arajani2022coimitation');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
 </li></ol>
 
 <h2 id="preprints">Preprints</h2>
@@ -393,7 +393,7 @@ function toggleBibtexrajani2022coimitation(parameter) {
 
 
 <div id="ablancomulero2023qdp" style="display: none;">
-<pre>@misc{blancomulero2023qdp,
+<pre>@inproceedings{blancomulero2023qdp,
   title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
   author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
   year = {2023},
