--- a/index.html
+++ b/index.html
@@ -85,81 +85,38 @@ supervised by Prof. Ville Kyrki.</p>
 the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
 
 <h2 id="selected-publications">Selected Publications</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). <i>QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation</i>.</span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
+<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
  
 
  
 
  
 
-    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
+    <a href="https://arxiv.org/abs/2106.15127"><input class="button4" type="button" value="link" /></a>
 
  
 
+    <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
 
 
-    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
 
 
-<div id="ablancomulero2023qdp" style="display: none;">
-<pre>@inproceedings{blancomulero2023qdp,
-  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
-  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
-  year = {2023},
-  eprint = {2303.13320},
-  archiveprefix = {arXiv},
-  primaryclass = {cs.RO},
-  link = {https://arxiv.org/abs/2303.13320},
-  group = {preprint},
-  website = {https://sites.google.com/view/qdp-srl}
+<div id="ablancomulero2021evolvinggraph" style="display: none;">
+<pre>@inproceedings{blancomulero2021evolvinggraph,
+  title = {Evolving-Graph Gaussian Processes},
+  author = {Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
+  year = {2021},
+  booktitle = {Time Series Workshop at 34th International Conference on Machine Learning.},
+  link = {https://arxiv.org/abs/2106.15127},
+  group = {workshop},
+  code = {https://github.com/dblanm/evolving-ggp}
 }
 </pre>
 </div>
 <script>
-function toggleBibtexblancomulero2023qdp(parameter) {
-    var x= document.getElementById('ablancomulero2023qdp');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
-<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
-
- 
-
-
-
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="arajani2023coimitation" style="display: none;">
-<pre>@article{rajani2023coimitation,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume = {37},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  website = {https://sites.google.com/view/co-imitation},
-  link = {https://arxiv.org/abs/2209.01207},
-  year = {2023},
-  group = {conference}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexrajani2023coimitation(parameter) {
-    var x= document.getElementById('arajani2023coimitation');
+function toggleBibtexblancomulero2021evolvinggraph(parameter) {
+    var x= document.getElementById('ablancomulero2021evolvinggraph');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -304,38 +261,82 @@ function toggleBibtexrajani2022coimitation_workshop(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
+<li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
  
 
  
 
  
 
-    <a href="https://arxiv.org/abs/2106.15127"><input class="button4" type="button" value="link" /></a>
+    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
 
  
 
-    <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
 
 
+    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
 
 
-<div id="ablancomulero2021evolvinggraph" style="display: none;">
-<pre>@inproceedings{blancomulero2021evolvinggraph,
-  title = {Evolving-Graph Gaussian Processes},
-  author = {Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
-  year = {2021},
-  booktitle = {Time Series Workshop at 34th International Conference on Machine Learning.},
-  link = {https://arxiv.org/abs/2106.15127},
-  group = {workshop},
-  code = {https://github.com/dblanm/evolving-ggp}
+<div id="ablancomulero2023qdp" style="display: none;">
+<pre>@inproceedings{blancomulero2023qdp,
+  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
+  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  year = {2023},
+  journal = {arXiv preprint arXiv:2303.13320},
+  eprint = {2303.13320},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.RO},
+  link = {https://arxiv.org/abs/2303.13320},
+  group = {preprint},
+  website = {https://sites.google.com/view/qdp-srl}
 }
 </pre>
 </div>
 <script>
-function toggleBibtexblancomulero2021evolvinggraph(parameter) {
-    var x= document.getElementById('ablancomulero2021evolvinggraph');
+function toggleBibtexblancomulero2023qdp(parameter) {
+    var x= document.getElementById('ablancomulero2023qdp');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
+<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="arajani2023coimitation" style="display: none;">
+<pre>@article{rajani2023coimitation,
+  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume = {37},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  website = {https://sites.google.com/view/co-imitation},
+  link = {https://arxiv.org/abs/2209.01207},
+  year = {2023},
+  group = {conference}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexrajani2023coimitation(parameter) {
+    var x= document.getElementById('arajani2023coimitation');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -346,7 +347,7 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 </li></ol>
 
 <h2 id="news">News</h2>
-<p><strong>24.03.2023</strong> We just published <a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
+<p><strong>24.03.2023</strong> We just published a new pre-print <a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
 Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a href="https://sites.google.com/view/qdp-srl">project website</a> for videos and more information.</p>
 
 <p><strong>08.02.2023</strong> - Our work <a href="https://sites.google.com/view/co-imitation">Co-Imitation: Learning Design and Behaviour by Imitation</a> was presented yesterday at AAAI 2023!</p>
@@ -357,16 +358,11 @@ Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a 
 
 <p><strong>03.08.2022</strong> - We just released the <a href="https://github.com/dblanm/gnn-manip">code</a> for our work <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert">Manipulation of granular materials by learning particle interactions</a>.</p>
 
-<p><strong>04.05.2022</strong> - I will be doing a research visit to the <a href="https://www.iri.upc.edu/">Institut de Robotica i Informatica Industrial IRI-CSIC-UPC</a> from September to end of December!</p>
-
-<p><strong>03.05.2022</strong> - I was granted the <a href="https://www.aalto.fi/en/foundation-for-aalto-university-science-and-technology/grants-from-the-foundations-own-funds">Foundation for Aalto University Science and Technology</a> travel grant!</p>
+<p><strong>03.05.2022</strong> - I was granted the <a href="https://www.aalto.fi/en/foundation-for-aalto-university-science-and-technology/grants-from-the-foundations-own-funds">Foundation for Aalto University Science and Technology</a> travel grant, so I will be doing a research visit to the <a href="https://www.iri.upc.edu/">Institut de Robotica i Informatica Industrial IRI-CSIC-UPC</a> from September to end of December!</p>
 
 <p><strong>28.03.2022</strong> - Our work <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert">Manipulation of granular materials by learning particle interactions</a> has been published at IEEE Robotics and Automation Letters. You can also find videos of the experimental results in the <a href="https://sites.google.com/view/granular-gnn-manipulation">project website</a>.</p>
 
 <p><strong>24.07.2021</strong> - I had a really great time at the Time Series Workshop at ICML 2021! You can find the poster of my work <a href="https://dblanm.github.io/assets/images/eGGP_poster.png">here</a>.</p>
-
-<p><strong>28.06.2021</strong> - Our work <a href="https://arxiv.org/abs/2106.15127">Evolving Graph Gaussian Processes</a> was accepted 
-to the <a href="http://roseyu.com/time-series-workshop/">Time Series Workshop</a> at ICML 2021. See you there!</p>
 
 
             </article>
