Change order of publications.

--- a/publications/index.html
+++ b/publications/index.html
@@ -113,88 +113,39 @@ function toggleBibtextuomainen2021manipulation(parameter) {
 </li></ol>
 
 <h2 id="conference-papers">Conference papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="2016_puma"><b>Blanco-Mulero, D.</b>, Alonso, S., &amp; Domínguez, M. (2016). Cascade Control of the PUMA 560 Motors using Simulink and Arduino. In R. E. Fernandez &amp; H. Montes (Eds.), <i>Robocity16 Open Conference on Future Trends in Robotics</i> (Vol. 1, pp. 349–356).</span></div>
-<button class="button0" onclick="toggleBibtex2016_puma()">Bibtex</button>
+<ol class="bibliography"><li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
+<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
  
 
  
 
  
 
-    <a href="https://www.researchgate.net/publication/309398733_Cascade_Control_of_the_PUMA_560_Motors_using_Simulink_and_Arduino"><input class="button4" type="button" value="link" /></a>
+    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
 
  
 
 
 
-
-<div id="a2016_puma" style="display: none;">
-<pre>@inproceedings{2016_puma,
-  title = {Cascade Control of the PUMA 560 Motors using Simulink and Arduino},
-  keywords = {robotics control, cascade control, Arduino},
-  author = {Blanco-Mulero, David and Alonso, Seraf{\'i}n and Dom{\'i}nguez, Manuel},
-  year = {2016},
-  volume = {1},
-  pages = {349--356},
-  isbn = {978-84-608-8452-1},
-  editor = {Fernandez, {Roemi E.} and Montes, Hector},
-  booktitle = {Robocity16 Open Conference on Future Trends in Robotics},
-  group = {conference},
-  link = {https://www.researchgate.net/publication/309398733_Cascade_Control_of_the_PUMA_560_Motors_using_Simulink_and_Arduino}
-}
-</pre>
-</div>
-<script>
-function toggleBibtex2016_puma(parameter) {
-    var x= document.getElementById('a2016_puma');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="2017_collision_avoidance">Di Castro, M., <b>Blanco-Mulero, D.</b>, Ferre, M., &amp; Masi, A. (2017). A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation. <i>Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering</i>, 6–10. https://doi.org/10.1145/3068796.3068800</span></div>
-<button class="button0" onclick="toggleBibtex2017_collision_avoidance()">Bibtex</button>
- 
-
-    <a href="http://doi.org/10.1145/3068796.3068800"><input class="button" type="button" value="doi" /></a>
-
- 
-
- 
-
-    <a href="https://doi.org/10.1145/3068796.3068800"><input class="button4" type="button" value="link" /></a>
-
- 
+    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
 
 
-
-
-<div id="a2017_collision_avoidance" style="display: none;">
-<pre>@inproceedings{2017_collision_avoidance,
-  author = {Di Castro, Mario and Blanco-Mulero, David and Ferre, Manuel and Masi, Alessandro},
-  title = {A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation},
-  year = {2017},
-  isbn = {9781450352802},
-  publisher = {Association for Computing Machinery},
-  address = {New York, NY, USA},
-  doi = {10.1145/3068796.3068800},
-  booktitle = {Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering},
-  pages = {6–10},
-  numpages = {5},
-  keywords = {Collision Avoidance, Robotics, Anti-collision system, Teleoperation, Artificial Intelligence},
-  location = {Paris, France},
-  series = {ICMRE 2017},
-  link = {https://doi.org/10.1145/3068796.3068800},
+<div id="arajani2023coimitation" style="display: none;">
+<pre>@article{rajani2023coimitation,
+  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume = {37},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  website = {https://sites.google.com/view/co-imitation},
+  link = {https://arxiv.org/abs/2209.01207},
+  year = {2023},
   group = {conference}
 }
 </pre>
 </div>
 <script>
-function toggleBibtex2017_collision_avoidance(parameter) {
-    var x= document.getElementById('a2017_collision_avoidance');
+function toggleBibtexrajani2023coimitation(parameter) {
+    var x= document.getElementById('arajani2023coimitation');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -252,39 +203,88 @@ function toggleBibtexhietala2022visualfeedback(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
-<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
+<li><div class="text-justify"><span id="2017_collision_avoidance">Di Castro, M., <b>Blanco-Mulero, D.</b>, Ferre, M., &amp; Masi, A. (2017). A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation. <i>Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering</i>, 6–10. https://doi.org/10.1145/3068796.3068800</span></div>
+<button class="button0" onclick="toggleBibtex2017_collision_avoidance()">Bibtex</button>
+ 
+
+    <a href="http://doi.org/10.1145/3068796.3068800"><input class="button" type="button" value="doi" /></a>
+
  
 
  
 
- 
-
-    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
+    <a href="https://doi.org/10.1145/3068796.3068800"><input class="button4" type="button" value="link" /></a>
 
  
 
 
 
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
 
-
-<div id="arajani2023coimitation" style="display: none;">
-<pre>@article{rajani2023coimitation,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume = {37},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  website = {https://sites.google.com/view/co-imitation},
-  link = {https://arxiv.org/abs/2209.01207},
-  year = {2023},
+<div id="a2017_collision_avoidance" style="display: none;">
+<pre>@inproceedings{2017_collision_avoidance,
+  author = {Di Castro, Mario and Blanco-Mulero, David and Ferre, Manuel and Masi, Alessandro},
+  title = {A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation},
+  year = {2017},
+  isbn = {9781450352802},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  doi = {10.1145/3068796.3068800},
+  booktitle = {Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering},
+  pages = {6–10},
+  numpages = {5},
+  keywords = {Collision Avoidance, Robotics, Anti-collision system, Teleoperation, Artificial Intelligence},
+  location = {Paris, France},
+  series = {ICMRE 2017},
+  link = {https://doi.org/10.1145/3068796.3068800},
   group = {conference}
 }
 </pre>
 </div>
 <script>
-function toggleBibtexrajani2023coimitation(parameter) {
-    var x= document.getElementById('arajani2023coimitation');
+function toggleBibtex2017_collision_avoidance(parameter) {
+    var x= document.getElementById('a2017_collision_avoidance');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="2016_puma"><b>Blanco-Mulero, D.</b>, Alonso, S., &amp; Domínguez, M. (2016). Cascade Control of the PUMA 560 Motors using Simulink and Arduino. In R. E. Fernandez &amp; H. Montes (Eds.), <i>Robocity16 Open Conference on Future Trends in Robotics</i> (Vol. 1, pp. 349–356).</span></div>
+<button class="button0" onclick="toggleBibtex2016_puma()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://www.researchgate.net/publication/309398733_Cascade_Control_of_the_PUMA_560_Motors_using_Simulink_and_Arduino"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+
+<div id="a2016_puma" style="display: none;">
+<pre>@inproceedings{2016_puma,
+  title = {Cascade Control of the PUMA 560 Motors using Simulink and Arduino},
+  keywords = {robotics control, cascade control, Arduino},
+  author = {Blanco-Mulero, David and Alonso, Seraf{\'i}n and Dom{\'i}nguez, Manuel},
+  year = {2016},
+  volume = {1},
+  pages = {349--356},
+  isbn = {978-84-608-8452-1},
+  editor = {Fernandez, {Roemi E.} and Montes, Hector},
+  booktitle = {Robocity16 Open Conference on Future Trends in Robotics},
+  group = {conference},
+  link = {https://www.researchgate.net/publication/309398733_Cascade_Control_of_the_PUMA_560_Motors_using_Simulink_and_Arduino}
+}
+</pre>
+</div>
+<script>
+function toggleBibtex2016_puma(parameter) {
+    var x= document.getElementById('a2016_puma');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -295,7 +295,45 @@ function toggleBibtexrajani2023coimitation(parameter) {
 </li></ol>
 
 <h2 id="workshop-papers">Workshop papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="rajani2022coimitation_workshop">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>. https://openreview.net/forum?id=SigVQmfyVfR</span></div>
+<button class="button0" onclick="toggleBibtexrajani2022coimitation_workshop()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="arajani2022coimitation_workshop" style="display: none;">
+<pre>@inproceedings{rajani2022coimitation_workshop,
+  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  booktitle = {Deep Reinforcement Learning Workshop NeurIPS 2022},
+  year = {2022},
+  url = {https://openreview.net/forum?id=SigVQmfyVfR},
+  group = {workshop},
+  website = {https://sites.google.com/view/co-imitation}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexrajani2022coimitation_workshop(parameter) {
+    var x= document.getElementById('arajani2022coimitation_workshop');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
 <button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
  
 
@@ -327,44 +365,6 @@ function toggleBibtexrajani2023coimitation(parameter) {
 <script>
 function toggleBibtexblancomulero2021evolvinggraph(parameter) {
     var x= document.getElementById('ablancomulero2021evolvinggraph');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="rajani2022coimitation_workshop">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>. https://openreview.net/forum?id=SigVQmfyVfR</span></div>
-<button class="button0" onclick="toggleBibtexrajani2022coimitation_workshop()">Bibtex</button>
- 
-
- 
-
- 
-
- 
-
-
-
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="arajani2022coimitation_workshop" style="display: none;">
-<pre>@inproceedings{rajani2022coimitation_workshop,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  booktitle = {Deep Reinforcement Learning Workshop NeurIPS 2022},
-  year = {2022},
-  url = {https://openreview.net/forum?id=SigVQmfyVfR},
-  group = {workshop},
-  website = {https://sites.google.com/view/co-imitation}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexrajani2022coimitation_workshop(parameter) {
-    var x= document.getElementById('arajani2022coimitation_workshop');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
