--- a/index.html
+++ b/index.html
@@ -85,38 +85,82 @@ supervised by Prof. Ville Kyrki.</p>
 the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
 
 <h2 id="selected-publications">Selected Publications</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
+<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
  
 
  
 
  
 
-    <a href="https://arxiv.org/abs/2106.15127"><input class="button4" type="button" value="link" /></a>
+    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
 
  
 
-    <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
 
 
+    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
 
 
-<div id="ablancomulero2021evolvinggraph" style="display: none;">
-<pre>@inproceedings{blancomulero2021evolvinggraph,
-  title = {Evolving-Graph Gaussian Processes},
-  author = {Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
-  year = {2021},
-  booktitle = {Time Series Workshop at 34th International Conference on Machine Learning.},
-  link = {https://arxiv.org/abs/2106.15127},
-  group = {workshop},
-  code = {https://github.com/dblanm/evolving-ggp}
+<div id="ablancomulero2023qdp" style="display: none;">
+<pre>@inproceedings{blancomulero2023qdp,
+  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
+  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  year = {2023},
+  journal = {arXiv preprint arXiv:2303.13320},
+  eprint = {2303.13320},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.RO},
+  link = {https://arxiv.org/abs/2303.13320},
+  group = {preprint},
+  website = {https://sites.google.com/view/qdp-srl}
 }
 </pre>
 </div>
 <script>
-function toggleBibtexblancomulero2021evolvinggraph(parameter) {
-    var x= document.getElementById('ablancomulero2021evolvinggraph');
+function toggleBibtexblancomulero2023qdp(parameter) {
+    var x= document.getElementById('ablancomulero2023qdp');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
+<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="arajani2023coimitation" style="display: none;">
+<pre>@article{rajani2023coimitation,
+  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume = {37},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  website = {https://sites.google.com/view/co-imitation},
+  link = {https://arxiv.org/abs/2209.01207},
+  year = {2023},
+  group = {conference}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexrajani2023coimitation(parameter) {
+    var x= document.getElementById('arajani2023coimitation');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -261,82 +305,38 @@ function toggleBibtexrajani2022coimitation_workshop(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
+<li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
  
 
  
 
  
 
-    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
+    <a href="https://arxiv.org/abs/2106.15127"><input class="button4" type="button" value="link" /></a>
 
  
 
+    <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
 
 
-    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
 
 
-<div id="ablancomulero2023qdp" style="display: none;">
-<pre>@inproceedings{blancomulero2023qdp,
-  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
-  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
-  year = {2023},
-  journal = {arXiv preprint arXiv:2303.13320},
-  eprint = {2303.13320},
-  archiveprefix = {arXiv},
-  primaryclass = {cs.RO},
-  link = {https://arxiv.org/abs/2303.13320},
-  group = {preprint},
-  website = {https://sites.google.com/view/qdp-srl}
+<div id="ablancomulero2021evolvinggraph" style="display: none;">
+<pre>@inproceedings{blancomulero2021evolvinggraph,
+  title = {Evolving-Graph Gaussian Processes},
+  author = {Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
+  year = {2021},
+  booktitle = {Time Series Workshop at 34th International Conference on Machine Learning.},
+  link = {https://arxiv.org/abs/2106.15127},
+  group = {workshop},
+  code = {https://github.com/dblanm/evolving-ggp}
 }
 </pre>
 </div>
 <script>
-function toggleBibtexblancomulero2023qdp(parameter) {
-    var x= document.getElementById('ablancomulero2023qdp');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
-<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
-
- 
-
-
-
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="arajani2023coimitation" style="display: none;">
-<pre>@article{rajani2023coimitation,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume = {37},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  website = {https://sites.google.com/view/co-imitation},
-  link = {https://arxiv.org/abs/2209.01207},
-  year = {2023},
-  group = {conference}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexrajani2023coimitation(parameter) {
-    var x= document.getElementById('arajani2023coimitation');
+function toggleBibtexblancomulero2021evolvinggraph(parameter) {
+    var x= document.getElementById('ablancomulero2021evolvinggraph');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
