--- a/publications/index.html
+++ b/publications/index.html
@@ -295,13 +295,15 @@ function toggleBibtex2016_puma(parameter) {
 </li></ol>
 
 <h2 id="workshop-papers">Workshop papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="rajani2022coimitation_workshop">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>. https://openreview.net/forum?id=SigVQmfyVfR</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="rajani2022coimitation_workshop">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>.</span></div>
 <button class="button0" onclick="toggleBibtexrajani2022coimitation_workshop()">Bibtex</button>
  
 
  
 
  
+
+    <a href="https://openreview.net/forum?id=SigVQmfyVfR"><input class="button4" type="button" value="link" /></a>
 
  
 
@@ -316,7 +318,7 @@ function toggleBibtex2016_puma(parameter) {
   author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
   booktitle = {Deep Reinforcement Learning Workshop NeurIPS 2022},
   year = {2022},
-  url = {https://openreview.net/forum?id=SigVQmfyVfR},
+  link = {https://openreview.net/forum?id=SigVQmfyVfR},
   group = {workshop},
   website = {https://sites.google.com/view/co-imitation}
 }
@@ -427,7 +429,7 @@ function toggleBibtexblancomulero2023qdp(parameter) {
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 24 March 2023
+                    Last updated on 02 May 2023
             </small>
           </p>
 
