--- a/index.html
+++ b/index.html
@@ -85,274 +85,19 @@ supervised by Prof. Ville Kyrki.</p>
 the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
 
 <h2 id="selected-publications">Selected Publications</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2303.13320"><input class="button4" type="button" value="link" /></a>
-
- 
-
-
-
-    <a href="https://sites.google.com/view/qdp-srl"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="ablancomulero2023qdp" style="display: none;">
-<pre>@inproceedings{blancomulero2023qdp,
-  title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
-  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
-  year = {2023},
-  journal = {arXiv preprint arXiv:2303.13320},
-  eprint = {2303.13320},
-  archiveprefix = {arXiv},
-  primaryclass = {cs.RO},
-  link = {https://arxiv.org/abs/2303.13320},
-  group = {preprint},
-  website = {https://sites.google.com/view/qdp-srl}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexblancomulero2023qdp(parameter) {
-    var x= document.getElementById('ablancomulero2023qdp');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
-<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
-
- 
-
-
-
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="arajani2023coimitation" style="display: none;">
-<pre>@article{rajani2023coimitation,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume = {37},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  website = {https://sites.google.com/view/co-imitation},
-  link = {https://arxiv.org/abs/2209.01207},
-  year = {2023},
-  group = {conference}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexrajani2023coimitation(parameter) {
-    var x= document.getElementById('arajani2023coimitation');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="hietala2022visualfeedback">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 1455–1462. https://doi.org/10.1109/IROS47612.2022.9981376</span></div>
-<button class="button0" onclick="toggleBibtexhietala2022visualfeedback()">Bibtex</button>
- 
-
-    <a href="http://doi.org/10.1109/IROS47612.2022.9981376"><input class="button" type="button" value="doi" /></a>
-
- 
-
- 
-
-    <a href="https://ieeexplore.ieee.org/abstract/document/9981376"><input class="button4" type="button" value="link" /></a>
-
- 
-
-    <a href="https://github.com/hietalajulius/dynamic-cloth-folding"><input class="button3" type="button" value="code" /></a>
-
-
-
-    <a href="https://sites.google.com/view/dynamic-cloth-folding/home"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="ahietala2022visualfeedback" style="display: none;">
-<pre>@inproceedings{hietala2022visualfeedback,
-  author = {Hietala, Julius and Blanco-Mulero, David and Alcan, Gokhan and Kyrki, Ville},
-  booktitle = {2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
-  title = {Learning Visual Feedback Control for Dynamic Cloth Folding},
-  year = {2022},
-  volume = {},
-  number = {},
-  pages = {1455-1462},
-  doi = {10.1109/IROS47612.2022.9981376},
-  group = {conference},
-  website = {https://sites.google.com/view/dynamic-cloth-folding/home},
-  code = {https://github.com/hietalajulius/dynamic-cloth-folding},
-  link = {https://ieeexplore.ieee.org/abstract/document/9981376}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexhietala2022visualfeedback(parameter) {
-    var x= document.getElementById('ahietala2022visualfeedback');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen*, N., <b>Blanco-Mulero*, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
-<button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
- 
-
-    <a href="http://doi.org/10.1109/LRA.2022.3158382"><input class="button" type="button" value="doi" /></a>
-
- 
-
- 
-
-    <a href="https://ieeexplore.ieee.org/document/9732690"><input class="button4" type="button" value="link" /></a>
-
- 
-
-    <a href="https://github.com/dblanm/gnn-manip"><input class="button3" type="button" value="code" /></a>
-
-
-
-    <a href="https://sites.google.com/view/granular-gnn-manipulation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="atuomainen2021manipulation" style="display: none;">
-<pre>@article{tuomainen2021manipulation,
-  author = {Tuomainen*, Neea and Blanco-Mulero*, David and Kyrki, Ville},
-  journal = {IEEE Robotics and Automation Letters},
-  title = {Manipulation of Granular Materials by Learning Particle Interactions},
-  year = {2022},
-  volume = {7},
-  number = {2},
-  pages = {5663-5670},
-  doi = {10.1109/LRA.2022.3158382},
-  link = {https://ieeexplore.ieee.org/document/9732690},
-  group = {journal},
-  website = {https://sites.google.com/view/granular-gnn-manipulation},
-  code = {https://github.com/dblanm/gnn-manip}
-}
-</pre>
-</div>
-<script>
-function toggleBibtextuomainen2021manipulation(parameter) {
-    var x= document.getElementById('atuomainen2021manipulation');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="rajani2022coimitation_workshop">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Deep Reinforcement Learning Workshop NeurIPS 2022</i>. https://openreview.net/forum?id=SigVQmfyVfR</span></div>
-<button class="button0" onclick="toggleBibtexrajani2022coimitation_workshop()">Bibtex</button>
- 
-
- 
-
- 
-
- 
-
-
-
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="arajani2022coimitation_workshop" style="display: none;">
-<pre>@inproceedings{rajani2022coimitation_workshop,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  booktitle = {Deep Reinforcement Learning Workshop NeurIPS 2022},
-  year = {2022},
-  url = {https://openreview.net/forum?id=SigVQmfyVfR},
-  group = {workshop},
-  website = {https://sites.google.com/view/co-imitation}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexrajani2022coimitation_workshop(parameter) {
-    var x= document.getElementById('arajani2022coimitation_workshop');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2106.15127"><input class="button4" type="button" value="link" /></a>
-
- 
-
-    <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
-
-
-
-
-<div id="ablancomulero2021evolvinggraph" style="display: none;">
-<pre>@inproceedings{blancomulero2021evolvinggraph,
-  title = {Evolving-Graph Gaussian Processes},
-  author = {Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
-  year = {2021},
-  booktitle = {Time Series Workshop at 34th International Conference on Machine Learning.},
-  link = {https://arxiv.org/abs/2106.15127},
-  group = {workshop},
-  code = {https://github.com/dblanm/evolving-ggp}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexblancomulero2021evolvinggraph(parameter) {
-    var x= document.getElementById('ablancomulero2021evolvinggraph');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li></ol>
+<p><a class="citation" href="#blancomulero2023qdp">(Blanco-Mulero et al., 2023)</a>
+<a class="citation" href="#rajani2023coimitation">(Rajani et al., 2023)</a>
+<a class="citation" href="#hietala2022visualfeedback">(Hietala et al., 2022)</a>
+<a class="citation" href="#tuomainen2021manipulation">(Tuomainen* et al., 2022)</a>
+<a class="citation" href="#blancomulero2021evolvinggraph">(Blanco-Mulero et al., 2021)</a></p>
 
 <h2 id="news">News</h2>
+<p><strong>02.05.2023</strong> I will be attending the <a href="https://deformable-workshop.github.io/icra2023/">Workshop on Representing and Manipulating Deformable Objects</a> at ICRA 2023, really eager to meet the community working on deformable objects!</p>
+
 <p><strong>24.03.2023</strong> We just published a new pre-print <a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
 Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a href="https://sites.google.com/view/qdp-srl">project website</a> for videos and more information.</p>
 
 <p><strong>08.02.2023</strong> - Our work <a href="https://sites.google.com/view/co-imitation">Co-Imitation: Learning Design and Behaviour by Imitation</a> was presented yesterday at AAAI 2023!</p>
-
-<p><strong>20.11.2022</strong> - Our work <a href="https://arxiv.org/abs/2209.01207">Co-Imitation: Learning Design and Behaviour by Imitation</a> was accepted to the NeurIPS <a href="https://sites.google.com/view/deep-rl-workshop-neurips-2022">DeepRL Workshop 2022</a>.</p>
 
 <p><strong>26.10.2022</strong> - I presented our work “<a href="https://arxiv.org/abs/2109.04771">Learning Visual Feedback Control for Dynamic Cloth Folding</a>” at IROS 2022, which was a finalist for the IROS Best RoboCup Paper, IROS ABB Best Student Paper and IROS Best Paper awards! Check the <a href="https://sites.google.com/view/dynamic-cloth-folding/home">project website</a> for more information.</p>
 
@@ -373,7 +118,7 @@ Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a 
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 24 March 2023
+                    Last updated on 02 May 2023
             </small>
           </p>
 
