Update news and AAAI23 bibtex.

--- a/publications/index.html
+++ b/publications/index.html
@@ -113,15 +113,17 @@ function toggleBibtextuomainen2021manipulation(parameter) {
 </li></ol>
 
 <h2 id="conference-papers">Conference papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>(5), 6200–6208. https://doi.org/10.1609/aaai.v37i5.25764</span></div>
 <button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
  
 
- 
+    <a href="http://doi.org/10.1609/aaai.v37i5.25764"><input class="button" type="button" value="doi" /></a>
 
  
 
-    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
+ 
+
+    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25764"><input class="button4" type="button" value="link" /></a>
 
  
 
@@ -132,13 +134,17 @@ function toggleBibtextuomainen2021manipulation(parameter) {
 
 <div id="arajani2023coimitation" style="display: none;">
 <pre>@article{rajani2023coimitation,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  title = {Co-imitation: Learning Design and Behaviour by Imitation},
   volume = {37},
+  doi = {10.1609/aaai.v37i5.25764},
+  number = {5},
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
   author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  website = {https://sites.google.com/view/co-imitation},
-  link = {https://arxiv.org/abs/2209.01207},
   year = {2023},
+  month = jun,
+  pages = {6200-6208},
+  link = {https://ojs.aaai.org/index.php/AAAI/article/view/25764},
+  website = {https://sites.google.com/view/co-imitation},
   group = {conference}
 }
 </pre>
@@ -429,7 +435,7 @@ function toggleBibtexblancomulero2023qdp(parameter) {
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 07 June 2023
+                    Last updated on 30 June 2023
             </small>
           </p>
 
