--- a/index.html
+++ b/index.html
@@ -85,7 +85,54 @@ supervised by Prof. Ville Kyrki.</p>
 the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
 
 <h2 id="selected-publications">Selected Publications</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>(5), 6200–6208. https://doi.org/10.1609/aaai.v37i5.25764</span></div>
+<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
+ 
+
+    <a href="http://doi.org/10.1609/aaai.v37i5.25764"><input class="button" type="button" value="doi" /></a>
+
+ 
+
+ 
+
+    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25764"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="arajani2023coimitation" style="display: none;">
+<pre>@article{rajani2023coimitation,
+  title = {Co-imitation: Learning Design and Behaviour by Imitation},
+  volume = {37},
+  doi = {10.1609/aaai.v37i5.25764},
+  number = {5},
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  year = {2023},
+  month = jun,
+  pages = {6200-6208},
+  link = {https://ojs.aaai.org/index.php/AAAI/article/view/25764},
+  website = {https://sites.google.com/view/co-imitation},
+  group = {conference}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexrajani2023coimitation(parameter) {
+    var x= document.getElementById('arajani2023coimitation');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="blancomulero2023qdp"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2303.13320</i>.</span></div>
 <button class="button0" onclick="toggleBibtexblancomulero2023qdp()">Bibtex</button>
  
 
@@ -120,47 +167,6 @@ the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement 
 <script>
 function toggleBibtexblancomulero2023qdp(parameter) {
     var x= document.getElementById('ablancomulero2023qdp');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li>
-<li><div class="text-justify"><span id="rajani2023coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2023). Co-Imitation: Learning Design and Behaviour by Imitation. <i>Proceedings of the AAAI Conference on Artificial Intelligence</i>, <i>37</i>.</span></div>
-<button class="button0" onclick="toggleBibtexrajani2023coimitation()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
-
- 
-
-
-
-    <a href="https://sites.google.com/view/co-imitation"><input class="button3" type="button" value="website" /></a>
-
-
-<div id="arajani2023coimitation" style="display: none;">
-<pre>@article{rajani2023coimitation,
-  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
-  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume = {37},
-  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
-  website = {https://sites.google.com/view/co-imitation},
-  link = {https://arxiv.org/abs/2209.01207},
-  year = {2023},
-  group = {conference}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexrajani2023coimitation(parameter) {
-    var x= document.getElementById('arajani2023coimitation');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -349,12 +355,12 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 </li></ol>
 
 <h2 id="news">News</h2>
+<p><strong>27.06.2023</strong> Our paper “<a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
+Manipulation Primitives for Robotic Cloth Manipulation</a>” was accepted to IROS 2023. You can check the <a href="https://sites.google.com/view/qdp-srl">project website</a> for videos and more information. See you in Detroit!</p>
+
 <p><strong>06.06.2023</strong> You can find here the <a href="https://dblanm.github.io/assets/images/ICRA_WS_Poster_2023.pdf">poster</a>, <a href="https://deformable-workshop.github.io/icra2023/spotlight/06-BLANCOMULERO-spotlight.pdf">extended abstract</a>, and <a href="https://youtu.be/y4tpT1i9OL8">video</a> of my work, <a href="https://sites.google.com/view/qdp-srl">QDP</a>, presented at the <a href="https://deformable-workshop.github.io/icra2023/">Workshop on Representing and Manipulating Deformable Objects</a> ICRA’23.</p>
 
 <p><strong>30.05.2023</strong> I participated in the <a href="http://www.iri.upc.edu/groups/perception/ClothManipulationChallenge/">Cloth Manipulation and Perception track</a> of the ICRA’23 <a href="https://www.iri.upc.edu/groups/perception/RGMCompetition/">Robotic Grasping and Manipulation Competition</a>.</p>
-
-<p><strong>24.03.2023</strong> I just published a new pre-print <a href="https://arxiv.org/abs/2303.13320">QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic
-Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a href="https://sites.google.com/view/qdp-srl">project website</a> for videos and more information.</p>
 
 <p><strong>08.02.2023</strong> - Our work <a href="https://sites.google.com/view/co-imitation">Co-Imitation: Learning Design and Behaviour by Imitation</a> was presented yesterday at AAAI 2023!</p>
 
@@ -377,7 +383,7 @@ Manipulation Primitives for Robotic Cloth Manipulation</a> you can check the <a 
             <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 07 June 2023
+                    Last updated on 30 June 2023
             </small>
           </p>
 
