--- a/publications/index.html
+++ b/publications/index.html
@@ -160,7 +160,7 @@ function toggleBibtexrajani2023coimitation(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="blancomulero2023qdp_iros">\textbfDavid \textbfBlanco-Mulero, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>.</span></div>
+<li><div class="text-justify"><span id="blancomulero2023qdp_iros"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>.</span></div>
 <button class="button0" onclick="toggleBibtexblancomulero2023qdp_iros()">Bibtex</button>
  
 
@@ -178,7 +178,7 @@ function toggleBibtexrajani2023coimitation(parameter) {
 <div id="ablancomulero2023qdp_iros" style="display: none;">
 <pre>@inproceedings{blancomulero2023qdp_iros,
   title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
-  author = {\textbf{David} \textbf{Blanco-Mulero} and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
   booktitle = {2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   year = {2023},
   group = {conference},
@@ -338,7 +338,7 @@ function toggleBibtex2016_puma(parameter) {
 </li></ol>
 
 <h2 id="workshop-papers">Workshop papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp_workshop">\textbfDavid \textbfBlanco-Mulero, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>3rd Workshop on Representing and Manipulating Deformable Objects, IEEE International Conference on Robotics and Automation ICRA</i>.</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2023qdp_workshop"><b>Blanco-Mulero, D.</b>, Alcan, G., Abu-Dakka, F. J., &amp; Kyrki, V. (2023). QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation. <i>3rd Workshop on Representing and Manipulating Deformable Objects, IEEE International Conference on Robotics and Automation ICRA</i>.</span></div>
 <button class="button0" onclick="toggleBibtexblancomulero2023qdp_workshop()">Bibtex</button>
  
 
@@ -356,7 +356,7 @@ function toggleBibtex2016_puma(parameter) {
 <div id="ablancomulero2023qdp_workshop" style="display: none;">
 <pre>@inproceedings{blancomulero2023qdp_workshop,
   title = {QDP: Learning to Sequentially Optimise Quasi-Static and Dynamic Manipulation Primitives for Robotic Cloth Manipulation},
-  author = {\textbf{David} \textbf{Blanco-Mulero} and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
+  author = {Blanco-Mulero, David and Alcan, Gokhan and Abu-Dakka, Fares J. and Kyrki, Ville},
   booktitle = {3rd Workshop on Representing and Manipulating Deformable Objects, IEEE International Conference on Robotics and Automation ICRA},
   year = {2023},
   group = {workshop},
