--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 </li></ol>
 
 <h2 id="news">News</h2>
-<p><strong>20.10.2023</strong> - I was granted the <a href="https://www.aalto.fi/en/foundation-for-aalto-university-science-and-technology/grants-from-the-foundations-own-funds">Nokia Foundation</a> Scholarship grant, to encourage the research of my PhD thesis.</p>
+<p><strong>20.10.2023</strong> - I was granted the <a href="https://www.aalto.fi/en/foundation-for-aalto-university-science-and-technology/grants-from-the-foundations-own-funds">Nokia Foundation</a> Scholarship grant, to support the research of my PhD thesis.</p>
 
 <p><strong>15.10.2023</strong> - We have published a pre-print <a href="https://arxiv.org/abs/2310.09543">Benchmarking the Sim-to-Real Gap in Cloth Manipulation</a>. This work presents a benchmark dataset for dynamic cloth manipulation, and evaluates the reality gap in MuJoCo, Bullet, Flex and SOFA using the proposed benchmark. Check the <a href="https://sites.google.com/view/cloth-sim2real-benchmark">project website</a> for more information.</p>
 
