Add websit and link to last preprint.

--- a/publications/index.html
+++ b/publications/index.html
@@ -465,11 +465,13 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 
  
 
+    <a href="https://arxiv.org/abs/2310.09543"><input class="button4" type="button" value="link" /></a>
+
  
 
 
 
-    <a href=""><input class="button3" type="button" value="website" /></a>
+    <a href="https://sites.google.com/view/cloth-sim2real-benchmark"><input class="button3" type="button" value="website" /></a>
 
 
 <div id="ablanco2023benchmarking" style="display: none;">
@@ -479,7 +481,8 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
   journal = { arXiv preprint arXiv:2310.09543},
   year = {2023},
   group = {preprint},
-  website = {}
+  link = {https://arxiv.org/abs/2310.09543},
+  website = {https://sites.google.com/view/cloth-sim2real-benchmark}
 }
 </pre>
 </div>
