Update pubs and about.

--- a/about/index.html
+++ b/about/index.html
@@ -67,13 +67,9 @@ I’m also about to defend my PhD Thesis at Aalto University <a href="https://ir
 
 <p>My PhD Thesis “<em>Towards Efficient Robotic Manipulation of Deformable Objects by Learning Dynamics Models and Adaptive Policies</em>”
 focused on bridging the gap in the adaptive capabilities of robotic systems to manipulate deformable objects.
-My PhD thesis combines techniques such as Reinforcement Learning, Graph Neural Networks and Gaussian Processes
+My PhD Thesis combines techniques such as Reinforcement Learning, Graph Neural Networks and Gaussian Processes
 to develop methods that can learn to manipulate deformable objects in simulation and transfer the learnt skills
-to the real-world.
-My PhD has been funded by the Academy of Finland AI Spider Silk Threading (ASSET) project, the B-REAL project and the
-Business Finland SANTTU project.
-During my PhD I was also a Teaching Assistant for the
-<a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
+to the real-world.</p>
 
 <figure class="image">
   <div style="text-align: center ">
@@ -81,6 +77,10 @@ During my PhD I was also a Teaching Assistant for the
   <figcaption></figcaption>
   </div>
 </figure>
+
+<p>During my PhD I was part of multiple projects of the Academy of Finland: the AI Spider Silk Threading (ASSET) project and the B-REAL project,
+as well as the Business Finland project SANTTU. I also collaborated actively with industry with partners such as
+<a href="https://www.cargotec.com/en/">Cargotec</a> or <a href="https://www.home.sandvik/en/">Sandvik</a>.</p>
 
 <p>During my PhD I received the <a href="https://nokiafoundation.com/grants/nokia-scholarship/">Nokia PhD Scholarship</a> grant
 (5000 Euros) to encourage the work carried out during my PhD thesis, and the 
