--- a/index.html
+++ b/index.html
@@ -421,6 +421,45 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
     }
 }
 </script>
+</li>
+<li><div class="text-justify"><span id="vihonen2022dynamic">Vihonen, J., Aref, M. M., Vladimı́r Petrı́k, Arndt, K., <b>Mulero, D. B.</b>, Kyrki, V., Naskali, J., &amp; Rasinen, M. (2022). <i>Dynamic flex compensation, coordinated hoist control, and anti-sway control for load handling machines</i>. Google Patents.</span></div>
+<button class="button0" onclick="toggleBibtexvihonen2022dynamic()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://patents.google.com/patent/US20220411234A1/en"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+
+<div id="avihonen2022dynamic" style="display: none;">
+<pre>@misc{vihonen2022dynamic,
+  title = {Dynamic flex compensation, coordinated hoist control, and anti-sway control for load handling machines},
+  author = {Vihonen, Juho and Aref, Mohammad M and Vladim{\'\i}r, Petr{\'\i}k and Arndt, Karol and Mulero, David Blanco and Kyrki, Ville and Naskali, Juuso and Rasinen, Marko},
+  year = {2022},
+  month = dec,
+  publisher = {Google Patents},
+  note = {US Patent App. 17/849,145},
+  group = {patents},
+  link = {https://patents.google.com/patent/US20220411234A1/en}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexvihonen2022dynamic(parameter) {
+    var x= document.getElementById('avihonen2022dynamic');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
 </li></ol>
 
 <h2 id="news">News</h2>
