Update about me.

--- a/about/index.html
+++ b/about/index.html
@@ -65,8 +65,9 @@
 <a href="https://www.iri.upc.edu/">Institut de Robòtica i Informàtica Industrial</a> (IRI-CSIC-UPC) at the Perception and Manipulation
 group lead by Prof. <a href="http://www.iri.upc.edu/people/torras">Carme Torras</a>.</p>
 
-<p>I received my Ph.D. in April 2024 from Aalto University, where I was supervised by Prof. Ville Kyrki, head of Aalto University <a href="https://irobotics.aalto.fi/">Intelligent Robotics group</a>
-My PhD Thesis “<em><a href="https://aaltodoc.aalto.fi/items/26ce42b3-b1ca-48d6-a03f-593c2003e107">Towards Efficient Robotic Manipulation of Deformable Objects by Learning Dynamics Models and Adaptive Policies</a></em>”
+<p>I received my Ph.D. in April 2024 from Aalto University, where I was supervised by Prof. Ville Kyrki, head of Aalto University <a href="https://irobotics.aalto.fi/">Intelligent Robotics group</a>.</p>
+
+<p>My PhD Thesis “<em><a href="https://aaltodoc.aalto.fi/items/26ce42b3-b1ca-48d6-a03f-593c2003e107">Towards Efficient Robotic Manipulation of Deformable Objects by Learning Dynamics Models and Adaptive Policies</a></em>”
 focused on bridging the gap in the adaptive capabilities of robotic systems to manipulate deformable objects.
 My PhD Thesis combines techniques such as Reinforcement Learning, Graph Neural Networks and Gaussian Processes
 to develop methods that can learn to manipulate deformable objects in simulation and transfer the learnt skills
